# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.673 2008-06-23 07:41:33 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.3.0 beta3 (2008/06/??)
 - (2008/06/23) Moved Ticket::ResponsibleAutoSet feature to external ticket
    event module (Kernel::System::Ticket::Event::ResponsibleAutoSet).
 - (2008/06/23) Fixed bug# 2959 - Linking and Unlinking Tickets is not addin
    ticket history and not executing TicketEventHandlerPost() by ticket link
    backend anymore.
 - (2008/06/20) Fixed bug# 1565 - Responsible Agent not updated when creating
    new ticket in phone or email ticket.
 - (2008/06/20) Removed output of linked objects in customer ticket print
    (because it's not needed in the customer panel).
 - (2008/06/19) Fixed bug# 2998 - Highlighted selection for notification
    listbox in admin interface.
 - (2008/06/19) Fixed bug# 3005 - AJAX functionality is not working in phone
    and email ticket for Service and SLA.
 - (2008/06/19) Added article TimeUnit support to automatically add time
    units to ticket by using generic agent (also usable over admin
    interface).
 - (2008/06/19) Added CleanUp() to Kernel::System::Cache to clean up/remove
    all cache files.
 - (2008/06/19) Fixed bug# 2957 - Merged ticket not canceled in link table.
 - (2008/06/19) Simplifed the new link mechanism.
 - (2008/06/19) Added cleanup of old cache files and cleanup of non existing
    TicketIDs in ticket_watcher and ArticleIDs in article_flag table (there
    was a bug, this reference entries got not deleted by deleting a ticket
    or article, e. g. by GenericAgent) to scripts/DBUpgrade-to-2.3.pl.
 - (2008/06/13) Added extra config option for "CheckMXRecord" config option
    to configure extra name servers for MX lookups.